--- a/index.html
+++ b/index.html
@@ -45,10 +45,7 @@
 								<header class="major">
 									<h2><a href="#">About Me</a></h2>
 									<a href="#" class="image main "><img src="images/img.jpg " alt="" /></a>
-									<p>I'm a Data Analyst with over a year of expertise, I've Spent time
-										Cleaning,Explorating and building Dashboards using SQL and Power BI,
-										among other technologies. I strive to increase customer satisfaction and to 
-										provide efficient and Analytical Insights.
+									<p>Hi, My name is Michael, and I'm a data analyst that is committed to turning data into insightful knowledge. Having a strong analytical approach and an excellent sense of pattern recognition, I enjoy breaking down complicated datasets to uncover important information that helps with strategic decision-making.
 									</p>
 								</header>
 								
@@ -80,22 +77,22 @@
 								</article>
 								<article>
 									<header>
+										<h2><a href="https://www.novypro.com/profile_projects/michaelakintola">POWER BI Projects</a></h2>
+									</header>
+									<a href="https://www.novypro.com/profile_projects/michaelakintola" class="image fit"><img src="images/bi.png" alt="" /></a>
+									<p>Data Cleaning and Visualization with SQL Server and Power BI</p>
+									<ul class="actions special">
+										<li><a href="https://www.novypro.com/profile_projects/michaelakintola" class="button">View Projects</a></li>
+									</ul>
+								</article>
+								<article>
+									<header>
 										<h2><a href="https://public.tableau.com/app/profile/michael.akintola">Tableau Projects</a></h2>
 									</header>
 									<a href="https://public.tableau.com/app/profile/michael.akintola" class="image fit"><img src="images/tableau.jpg" alt="" /></a>
 									<p>This holds all my Tableau Projects</p>
 									<ul class="actions special">
-										<li><a href="https://public.tableau.com/app/profile/michael.akintola" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="https://github.com/Michaaeeellll/Music-and-Mental-Health-Dashboard">Mental Health X Music</a></h2>
-									</header>
-									<a href="https://github.com/Michaaeeellll/Music-and-Mental-Health-Dashboard" class="image fit"><img src="images/mxmh.jpg" alt="" /></a>
-									<p>Data Cleaning and Visualization with SQL Server and Power BI</p>
-									<ul class="actions special">
-										<li><a href="https://github.com/Michaaeeellll/Music-and-Mental-Health-Dashboard" class="button">View Project</a></li>
+										<li><a href="https://public.tableau.com/app/profile/michael.akintola" class="button">View Projects</a></li>
 									</ul>
 								</article>
 								<article>
@@ -125,18 +122,18 @@
 							</section>
 							<section>
 								<h3>Email:</h3>
-								<p>akintolamike14@gmail.com</p>
+								<p>michaelanalytics01@gmail.com</p>
 							</section>
 							<section>
 								<h3>Resume/CV:</h3>
-								<p><a href="https://docs.google.com/document/d/1FsiIAO1I3uGoMMw8naeoiOyt1IrC8s-6/edit">View My CV</a></p>
+								<p><a href="https://drive.google.com/file/d/1M-JCwsGqiHDcDmlZfsry60HDhca9JLGD/view?usp=drive_link">View My CV</a></p>
 							</section>
 							<section>
 								<h3>Social</h3>
 								<ul class="icons alt">
 									<li><a href="https://www.linkedin.com/in/michael-akintola-8aa269270/" class="icon brands alt fa-linkedin"><span class="label">Linkedin</span></a></li>
 									<li><a href="https://github.com/Michaaeeellll" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="https://twitter.com/michaaaeeeellll?s=11&t=OInFdePOudYaKWbt2MRy8Q" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
+									<li><a href="https://x.com/AkintolaMichael?s=20" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
 								</ul>
 							</section>
 						</section>
