--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 										<h2><a href="https://www.novypro.com/profile_projects/michaelakintola">POWER BI Projects</a></h2>
 									</header>
 									<a href="https://www.novypro.com/profile_projects/michaelakintola" class="image fit"><img src="images/bi.png" alt="" /></a>
-									<p>Data Cleaning and Visualization with SQL Server and Power BI</p>
+									<p>This holds all my Power BI Project</p>
 									<ul class="actions special">
 										<li><a href="https://www.novypro.com/profile_projects/michaelakintola" class="button">View Projects</a></li>
 									</ul>
